syntax = "proto3";
option go_package = "generated/pb";

import "google/protobuf/timestamp.proto";

package kannon;

service Mailer {
  rpc SendHTML(SendHTMLReq) returns (SendRes) {}
  rpc SendTemplate(SendTemplateReq) returns (SendRes) {}
  rpc CreateTemplate(CreateTemplateReq) returns (CreateTemplateRes) {}
  rpc UpdateTemplate(UpdateTemplateReq) returns (UpdateTemplateRes) {}
  rpc DeleteTemplate(DeleteTemplateReq) returns (DeleteTemplateRes) {}
  rpc GetTemplate(GetTemplateReq) returns (GetTemplateRes) {}
  rpc GetTemplates(GetTemplatesReq) returns (GetTemplatesRes) {}
}

message SendHTMLReq {
  Sender sender = 1;
  repeated string to = 2 [deprecated = true];
  string subject = 3;
  string html = 4;
  optional google.protobuf.Timestamp scheduled_time = 5;
  repeated Recipient recipients = 6;
}

message SendTemplateReq {
  Sender sender = 1;
  repeated string to = 2 [deprecated = true];
  string subject = 3;
  string template_id = 4;
  optional google.protobuf.Timestamp scheduled_time = 5;
  repeated Recipient recipients = 6;
}

message SendRes {
  string message_id = 1;
  string template_id = 2;
  google.protobuf.Timestamp scheduled_time = 3;
}

message Sender {
  string email = 1;
  string alias = 2;
}

message Recipient {
  string email = 1;
  map<string, string> fields = 2;
}

message Template {
  string template_id = 1;
  string html = 2;
  string title = 3;
  string type = 4;
}

message CreateTemplateReq {
  string html = 1;
  string title = 2;
  string domain = 3;
}

message CreateTemplateRes {
  Template template = 1;
}

message UpdateTemplateReq {
  string template_id = 1;
  string html = 2;
  string title = 3;
}

message UpdateTemplateRes {
  Template template = 1;
}

message DeleteTemplateReq {
  string template_id = 1;
}

message DeleteTemplateRes {
  Template template = 1;
}

message GetTemplateReq {
  string template_id = 1;
}

message GetTemplateRes {
  Template template = 1;
}

message GetTemplatesReq {
  string domain = 1;
  uint32 skip = 2;
  uint32 take = 3;
}

message GetTemplatesRes {
  repeated Template templates = 1;
  uint32 total = 2;
}